# wrs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  alias.cpp  bench_all.sh  bench_all_64.sh  bench_amd.sh  bench_gsl.sh  bench_intel.sh  bench_query.sh  bench_query_64.sh  bench_query_strong.sh  bench_query_weak.sh  bench_seq.sh  bench_strong.sh  bench_strong_1e9.sh  bench_strong_1e9_64.sh  bench_strong_64.sh  bench_weak.sh  bench_weak_64.sh  graph_generator.hpp  rmat.cpp  rmat.hpp  rmat_base.hpp  rmat_fd.hpp  rmat_graph500.hpp  rmat_networkit.hpp  run_alias.sh  run_alias_64.sh  run_alias_query.sh  run_alias_query_64.sh  run_alias_ws.sh  run_alias_ws64.sh  run_query_strong.sh  run_query_weak.sh  run_seq.sh  util.hpp
cmake/: FindMKL.cmake
extlib/: CMakeLists.txt
extlib/stocc/: asmlibran.h  fnchyppr.cpp  mersenne.cpp  randomc.h  stoc1.cpp  stocc.h
tests/: accumulate.cpp  alias_common.cpp  alias_common.hpp  alias_edgecase.cpp  alias_query.cpp  alias_verify.cpp  environment.cpp
wrs/: CMakeLists.txt  accumulate.hpp  aggregate.hpp  alias.hpp  alias_key.hpp  dctree.hpp  dedup.hpp  gsl.cpp  gsl.hpp  memory.cpp  memory.hpp  multi_alias.hpp  numa_array.cpp  numa_array.hpp  outsens.hpp  par_alias.hpp  par_scan_alias.hpp  par_scan_alias2.hpp  parallel_do.cpp  parallel_do.hpp  prefix_sum.hpp  simple_scan_alias.hpp  timer.hpp  tinyhashtable.hpp  util.hpp  verify.hpp
wrs/generators/: dSFMT.cpp  dSFMT.hpp  mkl.cpp  mkl.hpp  select.hpp  stl.hpp  stocc.hpp
wrs/psa/: psa_base.hpp  subproblem.hpp
